force-app/main/default/objects/Inventory_Line__c/Inventory_Line__c.object-meta.xml
<CustomObject>
    <label>Inventory Line</label>
    <nameField>
        <label>Inventory Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>