force-app/main/default/objects/Inventory_Line__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Lines</relationshipLabel>
    <relationshipName>Inventory_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>