force-app/main/default/objects/Inventory_Line__c/fields/CapacityCompare__c.field-meta.xml
<CustomField>
    <fullName>CapacityCompare__c</fullName>
    <description>Returns True if current quantity of Inventory Line falls below 20% of Store&apos;s Inventory Quantity of the Capacity</description>
    <formula>If ( (20/100) &gt;= (Quantity__c / Inventory__r.Quantity__c) , &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CapacityCompare</label>
    <type>Text</type>
</CustomField>