force-app/main/default/objects/Inventory_Line__c/validationRules/Quantity_Not_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Not_0</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorMessage>Quantity must be greater or equal to 0</errorMessage>
</ValidationRule>